# todoapp-fastapi

./: .env  .gitignore  README.md  pyproject.toml  todos.db
alembic/: env.py
alembic/versions/: faa6d2d0a857_create_phone_number_col_for_users.py
fastapi_udemy_course/proj01_books/: app.py  main.py
fastapi_udemy_course/proj02_books/: app.py  main.py  model.py
fastapi_udemy_course/proj03_todo/: app.py  database.py  db_init.py  hashing.py  main.py  templating.py
fastapi_udemy_course/proj03_todo/database/: database.py  model.py
fastapi_udemy_course/proj03_todo/routers/: admin.py  auth.py  todos.py  user.py
fastapi_udemy_course/proj03_todo/static/js/: base.js
fastapi_udemy_course/proj03_todo/templates/: home.html  layout.html  login.html  register.html
tests/test_proj03_todo/: conftest.py  constants.py  test_admin.py  test_app.py  test_auth.py  test_todos.py  test_user.py
