[tool.poetry]
name = "fastapi-udemy-course"
version = "0.1.0"
description = ""
authors = ["Praveen Ilangovan <praveen.ilangovan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"

[tool.poetry.scripts]
proj01 = "fastapi_udemy_course.proj01_books.main:main"
proj02 = "fastapi_udemy_course.proj02_books.main:main"
proj03 = "fastapi_udemy_course.proj03_todo.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
