[tool.poetry]
name = "fastapi-udemy-course"
version = "0.1.0"
description = ""
authors = ["Praveen Ilangovan <praveen.ilangovan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.9.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
aiofiles = "^24.1.0"
jinja2 = "^3.1.4"

[tool.poetry.scripts]
proj01 = "fastapi_udemy_course.proj01_books.main:main"
proj02 = "fastapi_udemy_course.proj02_books.main:main"
proj03 = "fastapi_udemy_course.proj03_todo.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-env = "^1.1.5"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.pytest_env]
USE_POSTGRES='0'
DB_SQLITE="sqlite:///./test_todosapp.db"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
